// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch component should render correctly when disabled is false and checked is false 1`] = `
Array [
  ".switchContainer-0-2-1 {
  width: 56px;
  height: 40px;
  display: flex;
  position: relative;
}
.switchBase-0-2-2 {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
}
.switchBase-0-2-2:hover .switchOverlay-0-2-5 {
  opacity: 0.08;
}
.switchInput-0-2-3 {
  opacity: 0;
  position: absolute;
}
.switchInput-0-2-3:focus + .switchBase-0-2-2 .switchOverlay-0-2-5 {
  opacity: 0.12;
}
.switchTrack-0-2-4 {
  left: 10px;
  width: 36px;
  height: 14px;
  position: absolute;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 20px;
}
.switchOverlay-0-2-5 {
  width: 40px;
  height: 40px;
  position: absolute;
  transition: left 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 50%;
}
.switchThumb-0-2-6 {
  width: 20px;
  height: 20px;
  position: absolute;
  box-shadow: 0px 1px 3px #00000036;
  transition: left 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 50%;
}
.switchBase-d0-0-2-7 {
  cursor: pointer;
  pointer-events: unset;
}
.switchBase-d0-0-2-7:hover .switchOverlay-0-2-5 {
  background-color: #111111;
}
.switchInput-d1-0-2-8 {}
.switchInput-d1-0-2-8:focus + .switchBase-0-2-2 .switchOverlay-0-2-5 {
  background-color: #111111;
}
.switchTrack-d2-0-2-9 {
  background-color: #737373;
  opacity: 1;
}
.switchOverlay-d3-0-2-10 {
  left: 0;
}
.switchThumb-d4-0-2-11 {
  left: 10px;
  background-color: #ffffff;
}",
  <div>
    <span
      class=" switchContainer-0-2-1 Switch-gaya"
    >
      <input
        class="switchInput-0-2-3 switchInput-d1-0-2-8"
        id="toggleSwitch"
        type="checkbox"
        value="test"
      />
      <label
        class="switchBase-0-2-2 switchBase-d0-0-2-7"
        for="toggleSwitch"
      >
        <span
          class="switchTrack-0-2-4 switchTrack-d2-0-2-9"
        />
        <span
          class="switchOverlay-0-2-5 switchOverlay-d3-0-2-10"
        />
        <span
          class="switchThumb-0-2-6 switchThumb-d4-0-2-11"
        />
      </label>
    </span>
  </div>,
]
`;

exports[`Switch component should render correctly when disabled is false and checked is true 1`] = `
Array [
  ".switchContainer-0-2-1 {
  width: 56px;
  height: 40px;
  display: flex;
  position: relative;
}
.switchBase-0-2-2 {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
}
.switchBase-0-2-2:hover .switchOverlay-0-2-5 {
  opacity: 0.08;
}
.switchInput-0-2-3 {
  opacity: 0;
  position: absolute;
}
.switchInput-0-2-3:focus + .switchBase-0-2-2 .switchOverlay-0-2-5 {
  opacity: 0.12;
}
.switchTrack-0-2-4 {
  left: 10px;
  width: 36px;
  height: 14px;
  position: absolute;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 20px;
}
.switchOverlay-0-2-5 {
  width: 40px;
  height: 40px;
  position: absolute;
  transition: left 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 50%;
}
.switchThumb-0-2-6 {
  width: 20px;
  height: 20px;
  position: absolute;
  box-shadow: 0px 1px 3px #00000036;
  transition: left 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 50%;
}
.switchBase-d0-0-2-7 {
  cursor: pointer;
  pointer-events: unset;
}
.switchBase-d0-0-2-7:hover .switchOverlay-0-2-5 {
  background-color: #f4ab34;
}
.switchInput-d1-0-2-8 {}
.switchInput-d1-0-2-8:focus + .switchBase-0-2-2 .switchOverlay-0-2-5 {
  background-color: #f4ab34;
}
.switchTrack-d2-0-2-9 {
  background-color: #f4ab34;
  opacity: 0.48;
}
.switchOverlay-d3-0-2-10 {
  left: 16px;
}
.switchThumb-d4-0-2-11 {
  left: 26px;
  background-color: #f4ab34;
}",
  <div>
    <span
      class=" switchContainer-0-2-1 Switch-gaya"
    >
      <input
        checked=""
        class="switchInput-0-2-3 switchInput-d1-0-2-8"
        id="toggleSwitch"
        type="checkbox"
        value="test"
      />
      <label
        class="switchBase-0-2-2 switchBase-d0-0-2-7"
        for="toggleSwitch"
      >
        <span
          class="switchTrack-0-2-4 switchTrack-d2-0-2-9"
        />
        <span
          class="switchOverlay-0-2-5 switchOverlay-d3-0-2-10"
        />
        <span
          class="switchThumb-0-2-6 switchThumb-d4-0-2-11"
        />
      </label>
    </span>
  </div>,
]
`;

exports[`Switch component should render correctly when disabled is true and checked is false 1`] = `
Array [
  ".switchContainer-0-2-1 {
  width: 56px;
  height: 40px;
  display: flex;
  position: relative;
}
.switchBase-0-2-2 {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
}
.switchBase-0-2-2:hover .switchOverlay-0-2-5 {
  opacity: 0.08;
}
.switchInput-0-2-3 {
  opacity: 0;
  position: absolute;
}
.switchInput-0-2-3:focus + .switchBase-0-2-2 .switchOverlay-0-2-5 {
  opacity: 0.12;
}
.switchTrack-0-2-4 {
  left: 10px;
  width: 36px;
  height: 14px;
  position: absolute;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 20px;
}
.switchOverlay-0-2-5 {
  width: 40px;
  height: 40px;
  position: absolute;
  transition: left 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 50%;
}
.switchThumb-0-2-6 {
  width: 20px;
  height: 20px;
  position: absolute;
  box-shadow: 0px 1px 3px #00000036;
  transition: left 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 50%;
}
.switchBase-d0-0-2-7 {
  cursor: default;
  pointer-events: none;
}
.switchBase-d0-0-2-7:hover .switchOverlay-0-2-5 {
  background-color: #111111;
}
.switchInput-d1-0-2-8 {}
.switchInput-d1-0-2-8:focus + .switchBase-0-2-2 .switchOverlay-0-2-5 {
  background-color: #111111;
}
.switchTrack-d2-0-2-9 {
  background-color: #8c8c8c;
  opacity: 1;
}
.switchOverlay-d3-0-2-10 {
  left: 0;
}
.switchThumb-d4-0-2-11 {
  left: 10px;
  background-color: #ffffff;
}",
  <div>
    <span
      class=" switchContainer-0-2-1 Switch-gaya"
    >
      <input
        class="switchInput-0-2-3 switchInput-d1-0-2-8"
        disabled=""
        id="toggleSwitch"
        type="checkbox"
        value="test"
      />
      <label
        class="switchBase-0-2-2 switchBase-d0-0-2-7"
        for="toggleSwitch"
      >
        <span
          class="switchTrack-0-2-4 switchTrack-d2-0-2-9"
        />
        <span
          class="switchOverlay-0-2-5 switchOverlay-d3-0-2-10"
        />
        <span
          class="switchThumb-0-2-6 switchThumb-d4-0-2-11"
        />
      </label>
    </span>
  </div>,
]
`;

exports[`Switch component should render correctly when disabled is true and checked is true 1`] = `
Array [
  ".switchContainer-0-2-1 {
  width: 56px;
  height: 40px;
  display: flex;
  position: relative;
}
.switchBase-0-2-2 {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
}
.switchBase-0-2-2:hover .switchOverlay-0-2-5 {
  opacity: 0.08;
}
.switchInput-0-2-3 {
  opacity: 0;
  position: absolute;
}
.switchInput-0-2-3:focus + .switchBase-0-2-2 .switchOverlay-0-2-5 {
  opacity: 0.12;
}
.switchTrack-0-2-4 {
  left: 10px;
  width: 36px;
  height: 14px;
  position: absolute;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 20px;
}
.switchOverlay-0-2-5 {
  width: 40px;
  height: 40px;
  position: absolute;
  transition: left 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 50%;
}
.switchThumb-0-2-6 {
  width: 20px;
  height: 20px;
  position: absolute;
  box-shadow: 0px 1px 3px #00000036;
  transition: left 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 50%;
}
.switchBase-d0-0-2-7 {
  cursor: default;
  pointer-events: none;
}
.switchBase-d0-0-2-7:hover .switchOverlay-0-2-5 {
  background-color: #f4ab34;
}
.switchInput-d1-0-2-8 {}
.switchInput-d1-0-2-8:focus + .switchBase-0-2-2 .switchOverlay-0-2-5 {
  background-color: #f4ab34;
}
.switchTrack-d2-0-2-9 {
  background-color: #8c8c8c;
  opacity: 1;
}
.switchOverlay-d3-0-2-10 {
  left: 16px;
}
.switchThumb-d4-0-2-11 {
  left: 26px;
  background-color: #ffffff;
}",
  <div>
    <span
      class=" switchContainer-0-2-1 Switch-gaya"
    >
      <input
        checked=""
        class="switchInput-0-2-3 switchInput-d1-0-2-8"
        disabled=""
        id="toggleSwitch"
        type="checkbox"
        value="test"
      />
      <label
        class="switchBase-0-2-2 switchBase-d0-0-2-7"
        for="toggleSwitch"
      >
        <span
          class="switchTrack-0-2-4 switchTrack-d2-0-2-9"
        />
        <span
          class="switchOverlay-0-2-5 switchOverlay-d3-0-2-10"
        />
        <span
          class="switchThumb-0-2-6 switchThumb-d4-0-2-11"
        />
      </label>
    </span>
  </div>,
]
`;
